overlays/uksouth-barclays/default/docs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: docs.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: docs.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 80
  tls:
    - hosts:
        - docs.${cluster_name}.${cluster_location}.bink.sh
